templates: front page for sandbox site

--- a/demo-inveniordm/assets/scss/demo-inveniordm/theme.scss
+++ b/demo-inveniordm/assets/scss/demo-inveniordm/theme.scss
@@ -8,3 +8,15 @@
 
 @import "variables";
 @import "../invenio_app_rdm/theme";
+
+.section-subtitle {
+    margin-bottom: 0px;
+}
+
+.invenio-rdm-project-goals {
+    margin: 40px 20px;
+}
+
+.rdm-goal {
+    margin: 0px 20px;
+}
