ui: semantic-ui migration
Co-authored-by: ppanero <pablo.panero@cern.ch>

--- a/demo-inveniordm/assets/less/theme.less
+++ b/demo-inveniordm/assets/less/theme.less
@@ -7,16 +7,4 @@
  */
 
 @import "variables";
-@import "../invenio_app_rdm/theme";
-
-.section-subtitle {
-    margin-bottom: 0px;
-}
-
-.invenio-rdm-project-goals {
-    margin: 40px 20px;
-}
-
-.rdm-goal {
-    margin: 0px 20px;
-}
+@import "invenio_app_rdm/theme";
