--- a/demo-inveniordm/assets/less/variables.less
+++ b/demo-inveniordm/assets/less/variables.less
@@ -4,8 +4,6 @@
  *
  * Invenio App RDM is free software; you can redistribute it and/or modify it
  * under the terms of the MIT License; see LICENSE file for more details.
-*/
+ */
 
-
-@import "variables";
-@import "../../invenio_app_rdm/search/theme";
+@import "invenio_app_rdm/variables.less";
