templates: fix icons size

--- a/demo-inveniordm/templates/demo_inveniordm/demo_frontpage.html
+++ b/demo-inveniordm/templates/demo_inveniordm/demo_frontpage.html
@@ -18,7 +18,7 @@
       <div class="invenio-rdm-project-goals">
         <div class="rdm-goal">
           <div class="column">
-            <i class="key icon"></i>
+            <i class="key huge icon"></i>
             <h3>Repository Platform</h3>
             <p>InvenioRDM is a turn-key research data management (RDM) repository platform based on <a
                 href="https://inveniosoftware.org/products/framework/">Invenio Framework</a> and <a
@@ -28,7 +28,7 @@
 
         <div class="rdm-goal">
           <div class="column">
-            <i class="users icon"></i>
+            <i class="users huge icon"></i>
             <h3>Open Source</h3>
             <p>InvenioRDM is Open Source and has a big community behind it. You can <a
                 href="https://inveniordm.docs.cern.ch">deploy your own instance</a> in just a few steps.</p>
