global: fix rdm theme

--- a/demo-inveniordm/templates/demo_inveniordm/demo_frontpage.html
+++ b/demo-inveniordm/templates/demo_inveniordm/demo_frontpage.html
@@ -12,165 +12,149 @@
 
 {%- block first_section %}
 
-<section class="invenio-rdm-project-section section-content-white-bg">
+<section class="invenio-rdm-project-section section-content white-bg">
   <span class="section-title">Sandbox deployment of InvenioRDM</span>
-  <div class="ui container">
-    <div class="ui padded relaxed centered grid">
-      <p>Here you can test all the features it has to offer!</p>
-      <div class="invenio-rdm-project-goals">
-        <div class="rdm-goal">
-          <div class="column">
+    <div class="ui container two column grid center aligned vertically padded relaxed stackable">
+      <div class="row one column">
+        <div class="column">
+          <p>Here you can test all the features it has to offer!</p>
+          </div>
+        </div>
+        <div class="rdm-goal six wide column">
             <i class="key huge icon"></i>
             <h3>Repository Platform</h3>
             <p>InvenioRDM is a turn-key research data management (RDM) repository platform based on <a
                 href="https://inveniosoftware.org/products/framework/">Invenio Framework</a> and <a
                 href="https://www.zenodo.org">Zenodo</a>.</p>
-          </div>
         </div>
 
-        <div class="rdm-goal">
-          <div class="column">
+        <div class="rdm-goal six wide column">
             <i class="users huge icon"></i>
             <h3>Open Source</h3>
             <p>InvenioRDM is Open Source and has a big community behind it. You can <a
                 href="https://inveniordm.docs.cern.ch">deploy your own instance</a> in just a few steps.</p>
-          </div>
         </div>
+      <div class="row one column">
+        <div class="column">
+        <p>More information on the <a href="https://inveniosoftware.org/products/rdm">InvenioRDM product page</a></p>
+          </div>
       </div>
-      <p>More information on the <a href="https://inveniosoftware.org/products/rdm">InvenioRDM product page</a></p>
-    </div>
+      </div>
 
-
-  </div>
-  </div>
-  </div>
 </section>
 {%- endblock first_section %}
 
 {%- block second_section%}
-<section class="brought-to-you-section section-content-light-bg">
+<section class="brought-to-you-section section-content light-bg">
   <span class="section-title frontpage-title">{{ _("Brought to you by") }}</span>
   <div class="ui container">
-    <div class="ui padded relaxed centered grid">
-      <div class="invenio-rdm-project-collaborators">
-        <div class="rdm-collaborators">
+    <div class="ui relaxed vertically padded centered grid stackable">
+        <div class="rdm-collaborators four wide column">
           <a href="http://www.bnl.gov/">
             <img class="collaborators-logo" src="/static/images/logo-bnl.png" title="Brookhaven National Laboratory">
           </a>
         </div>
-        <div class="rdm-collaborators">
+        <div class="rdm-collaborators four wide column">
           <a href="https://www.library.caltech.edu/">
             <img class="collaborators-logo" src="/static/images/logo-caltechlibrary.png" title="Caltech Library">
           </a>
         </div>
-        <div class="rdm-collaborators">
+        <div class="rdm-collaborators four wide column">
           <a href="http://home.cern">
             <img class="collaborators-logo" src="/static/images/logo-cern.png" title="CERN">
           </a>
         </div>
-        <div class="rdm-collaborators">
+        <div class="rdm-collaborators four wide column">
           <a href="https://cottagelabs.com">
             <img class="collaborators-logo" src="/static/images/logo-cottagelabs.png" title="Cottage Labs">
           </a>
         </div>
-      </div>
-      <div class="invenio-rdm-project-collaborators">
-        <div class="rdm-collaborators">
+        <div class="rdm-collaborators four wide column">
           <a href="https://www.data-futures.org/">
             <img class="collaborators-logo" src="/static/images/logo-data-futures.png" title="Data Futures">
           </a>
         </div>
-        <div class="rdm-collaborators">
+        <div class="rdm-collaborators four wide column">
           <a href="https://www.eko-konnect.org.ng">
             <img class="collaborators-logo" src="/static/images/logo-eko-konnect.png" title="Eko Konnect">
           </a>
         </div>
-        <div class="rdm-collaborators">
+        <div class="rdm-collaborators four wide column">
           <a href="http://www.earthobservations.org/">
             <img class="collaborators-logo" src="/static/images/logo-geo.svg" title="Group on Earth Observations">
           </a>
         </div>
-        <div class="rdm-collaborators">
+        <div class="rdm-collaborators four wide column">
           <a href="https://www.hzdr.de/">
             <img class="collaborators-logo" src="/static/images/logo-hzdr.png" title="Helmholtz Zentrum Dresden-Rossendorf">
           </a>
         </div>
-      </div>
-      <div class="invenio-rdm-project-collaborators">
-        
-        <div class="rdm-collaborators">
+        <div class="rdm-collaborators four wide column">
           <a href="http://home.infn.it/">
             <img class="collaborators-logo" src="/static/images/logo-infn.svg" title="Istituto Nazionale di Fisica Nucleare">
           </a>
         </div>
-        <div class="rdm-collaborators">
+        <div class="rdm-collaborators four wide column">
           <a href="https://ec.europa.eu/jrc/">
             <img class="collaborators-logo" src="/static/images/logo-jrc.svg" title="Joint Research Centre">
           </a>
         </div>
-        <div class="rdm-collaborators">
+        <div class="rdm-collaborators four wide column">
           <a href="https://www.nyu.edu/">
             <img class="collaborators-logo" src="/static/images/logo-nyu.png" title="New York University">
           </a>
         </div>
-        <div class="rdm-collaborators">
+        <div class="rdm-collaborators four wide column">
           <a href="https://www.northwestern.edu/">
             <img class="collaborators-logo" src="/static/images/logo-northwestern-university.png" title="Northwestern University">
           </a>
         </div>
-      </div>
-      <div class="invenio-rdm-project-collaborators">
-        <div class="rdm-collaborators">
+        <div class="rdm-collaborators four wide column">
           <a href="https://www.openaire.eu/">
             <img class="collaborators-logo" src="/static/images/logo-openaire.png" title="OpenAIRE">
           </a>
         </div>
-        <div class="rdm-collaborators">
+        <div class="rdm-collaborators four wide column">
           <a href="https://tind.io/">
             <img class="collaborators-logo" src="/static/images/logo-tind.png" title="TIND">
           </a>
         </div>
-        <div class="rdm-collaborators">
+        <div class="rdm-collaborators four wide column">
           <a href="https://ulakbim.tubitak.gov.tr">
             <img class="collaborators-logo" src="/static/images/logo-tubitak.svg" title="Tubitak">
           </a>
         </div>
-        <div class="rdm-collaborators">
+        <div class="rdm-collaborators four wide column">
           <a href="https://www.tugraz.at/en/home/">
             <img class="collaborators-logo" src="/static/images/logo-tu-graz.svg" title="TU Graz">
           </a>
         </div>
-      </div>
-      <div class="invenio-rdm-project-collaborators">
-        <div class="rdm-collaborators">
+        <div class="rdm-collaborators four wide column">
           <a href="https://www.tuwien.at/">
             <img class="collaborators-logo" src="/static/images/logo-tu-wien.svg" title="TU Wien">
           </a>
         </div>
-        <div class="rdm-collaborators">
+        <div class="rdm-collaborators four wide column">
           <a href="https://www.uni-hamburg.de/">
             <img class="collaborators-logo" src="/static/images/logo-uni-hamburg.png" title="Universität Hamburg">
           </a>
         </div>
-        <div class="rdm-collaborators">
+        <div class="rdm-collaborators four wide column">
           <a href="https://www.uni-muenster.de/en/">
             <img class="collaborators-logo" src="/static/images/logo-uni-munster.png" title="University of Münster">
           </a>
         </div>
-        <div class="rdm-collaborators">
+        <div class="rdm-collaborators four wide column">
           <a href="https://uni-tuebingen.de/en/">
             <img class="collaborators-logo" src="/static/images/logo-uni-tubingen.png" title="University of Tübingen">
           </a>
         </div>
-      </div>
-      <div class="invenio-rdm-project-collaborators">
-        <div class="rdm-collaborators">
+        <div class="rdm-collaborators four wide column">
           <a href="https://www.wacren.net">
             <img class="collaborators-logo" src="/static/images/logo-wacren.png" title="West and Central African Research and Education Network">
           </a>
         </div>
       </div>
-    </div>
   </div>
 </section>
 {%- endblock second_section%}
