--- a/demo-inveniordm/templates/demo_inveniordm/demo_frontpage.html
+++ b/demo-inveniordm/templates/demo_inveniordm/demo_frontpage.html
@@ -68,9 +68,15 @@
           </a>
         </div>
         <div class="rdm-collaborators four wide column">
-          <a href="http://home.cern">
+          <a href="https://home.cern">
             <img class="collaborators-logo" src="/static/images/logo-cern.png"
                  title="CERN">
+          </a>
+        </div>
+        <div class="rdm-collaborators four wide column">
+          <a href="http://www.cnudst.rnrt.tn/">
+            <img class="collaborators-logo" src="/static/images/logo-CNUDST.png"
+                 title="CNUDST">
           </a>
         </div>
         <div class="rdm-collaborators four wide column">
