parterns: add Front Matter

--- a/demo-inveniordm/templates/demo_inveniordm/demo_frontpage.html
+++ b/demo-inveniordm/templates/demo_inveniordm/demo_frontpage.html
@@ -100,6 +100,12 @@
           </a>
         </div>
         <div class="rdm-collaborators four wide column">
+          <a href="https://front-matter.io/">
+            <img class="collaborators-logo"
+                 src="/static/images/logo-frontmatter.png" title="Front Matter">
+          </a>
+        </div>
+        <div class="rdm-collaborators four wide column">
           <a href="http://www.earthobservations.org/">
             <img class="collaborators-logo" src="/static/images/logo-geo.svg"
                  title="Group on Earth Observations">
