--- a/demo-inveniordm/templates/demo_inveniordm/demo_frontpage.html
+++ b/demo-inveniordm/templates/demo_inveniordm/demo_frontpage.html
@@ -200,6 +200,13 @@
                  title="West and Central African Research and Education Network">
           </a>
         </div>
+        <div class="rdm-collaborators four wide column">
+          <a href="https://www.kth.se">
+            <img class="collaborators-logo"
+                 src="/static/images/logo-kth.svg"
+                 title="KTH Royal Institute of Technology">
+          </a>
+        </div>
       </div>
     </div>
   </section>
