frontpage: update logos

--- a/templates/demo_inveniordm/demo_frontpage.html
+++ b/templates/demo_inveniordm/demo_frontpage.html
@@ -149,12 +149,6 @@
           </a>
         </div>
         <div class="rdm-collaborators four wide column">
-          <a href="https://tind.io/">
-            <img class="collaborators-logo" src="/static/images/logo-tind.png"
-                 title="TIND">
-          </a>
-        </div>
-        <div class="rdm-collaborators four wide column">
           <a href="https://ulakbim.tubitak.gov.tr">
             <img class="collaborators-logo"
                  src="/static/images/logo-tubitak.svg" title="Tubitak">
@@ -170,6 +164,12 @@
           <a href="https://www.tuwien.at/">
             <img class="collaborators-logo"
                  src="/static/images/logo-tu-wien.svg" title="TU Wien">
+          </a>
+        </div>
+        <div class="rdm-collaborators four wide column">
+          <a href="https://www.uni-bamberg.de/en/">
+            <img class="collaborators-logo" src="/static/images/logo-uni-bamberg.svg"
+                 title="University of Bamberg">
           </a>
         </div>
         <div class="rdm-collaborators four wide column">
